# vgm_parser

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml  sonar-project.properties  spec_compliance.md
analysis/: test_coverage_analysis.md
docs/: gd3_specs.txt  vgm_specs.md
examples/: basic_usage.rs
proptest-regressions/: header.txt
proptest-regressions/vgm_commands/: tests.txt
src/: errors.rs  header.rs  lib.rs  main.rs  metadata.rs  parser_config.rs  systems.rs  traits.rs  utils.rs  validation.rs  validation_integration_test.rs  vgm_commands.rs
src/custom_encoder/: mod.rs
src/tokenizing/: mod.rs
src/vgm_commands/: commands.rs  compression.rs  data_blocks.rs  mod.rs  parser.rs  parsing.rs  serialization.rs  tests.rs
tests/: builder_integration.rs  mod.rs
tests/fixtures/: builders.rs  mod.rs
